# action_findball

./: CMakeLists.txt  README.md  package.xml
.cache/clangd/index/: brightedges.hpp.B8ECFF70F9143AD3.idx  color_match.hpp.A3C2DA0654E16164.idx  deriche_filter.hpp.1F68E135BD462D7F.idx  disparity_filter.hpp.83E9D0CA34065D55.idx  edge_drawing.cpp.040389E888034A42.idx  edge_drawing.hpp.6FC0318B032311B6.idx  edge_drawing_common.hpp.0D09772F11D3C208.idx  edge_filter.hpp.39086E5521E9A4A5.idx  edgeboxes.hpp.DCBFE692B3F7668E.idx  edgepreserving_filter.hpp.8E63036B88ECDEBC.idx  estimated_covariance.hpp.8E0644734435A7D9.idx  fast_hough_transform.hpp.F4BB6366B417D350.idx  fast_line_detector.hpp.D12D1DE8163FDE16.idx  find_ellipses.cpp.DF20BDDCBEE73544.idx  find_ellipses.hpp.FA3C675F6F2447F7.idx  fourier_descriptors.hpp.0394656BCD05C89F.idx  lsc.hpp.ABC3EB46FD58DAF3.idx  main.cpp.514FD3A2736AC62E.idx  paillou_filter.hpp.BFA209D278821293.idx  peilin.hpp.4C2AC1D8FDEDF85A.idx  precomp.hpp.B9958AB9FF158092.idx  radon_transform.hpp.B5A5DEA0F96583BD.idx  ridgefilter.hpp.1879F38D302B78F1.idx  run_length_morphology.hpp.C96ADDE3330545F4.idx  scansegment.hpp.A6E1502E98D1622E.idx  seeds.hpp.0D007A9AC4BB4C00.idx  segmentation.hpp.D18847747A5B6F77.idx  slic.hpp.03491D6A93776069.idx  sparse_match_interpolator.hpp.D7B9D96666D5317D.idx  structured_edge_detection.hpp.BF2A670414D37C44.idx  weighted_median_filter.hpp.3F346329B3C78C1C.idx  ximgproc.hpp.41CB4607A03E30AD.idx
HSM/: Event_Define.cpp  Event_Define.hpp  HStateMachine.cpp  HStateMachine.hpp
include/action_findball/: FindBall.hpp  PTZ_angle.hpp  State.hpp  action_catch.hpp  approaching_ball.hpp  calibration.hpp  camera_distribute.hpp  chassis_related.hpp  lifecycle_manager_client.hpp  pid_controller.hpp  spin_to_func.hpp
launch/: catchball.launch.py
python/: webstreaming.py
src/: FindBall.cpp  PTZ_angle.cpp  action_catch.cpp  action_catch___cpp  approaching_ball.cpp  calibration.cpp  camera_distribute.cpp  catch_ball.cpp  lifecycle_manager_client.cpp  pid_controller.cpp  publisher_findball.cpp  spin_to_func.cpp
src/ximgproc/src/: edge_drawing.cpp
xml/: camera.xml  electronic_fence.xml  goal.xml  variable.xml
